Enhanced ETL pipeline: added SQS configuration, re-enabled steps in job flow, improved metadata handling with null-safety checks, and added project banner.